dist/b2b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: b2b-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-body-size: 30m
    nginx.ingress.kubernetes.io/proxy_buffer_size: 64k
    nginx.ingress.kubernetes.io/proxy_buffers: 16 32k;
    nginx.ingress.kubernetes.io/proxy_max_temp_file_size: "0"
    nginx.ingress.kubernetes.io/proxy_temp_file_write_size: 64k
    nginx.ingress.kubernetes.io/proxy_http_version: "1.1"
spec:
  rules:
  - host: b2b-core.demo.baokim.vn
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: b2b-core-svc
            port:
              number: 80
  - host: b2b-admin-api.demo.baokim.vn
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: b2b-admin-api-svc
            port:
              number: 80
